--- a/index.html
+++ b/index.html
@@ -199,69 +199,69 @@ background-repeat: no-repeat;
     <p>Click your favorite to personalize!</p>
 
     <div class="card-grid" id="cardGrid">
-        <div class="card" data-card-id="1"data-img="images/xmas1.jpg">
-            <img src="images/xmas1.jpg" class="card-image">
+        <div class="card" data-card-id="1"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas1.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas1.jpg" class="card-image">
 
         </div>
-        <div class="card" data-card-id="2"data-img="images/xmas2.jpg">
-            <img src="images/xmas2.jpg" class="card-image">
+        <div class="card" data-card-id="2"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas2.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas2.jpg" class="card-image">
 </div>
-        <div class="card" data-card-id="3"data-img="images/xmas3.jpg">
-            <img src="images/xmas3.jpg" class="card-image"></div>
-        <div class="card" data-card-id="4"data-img="images/xmas4.jpg">
-            <img src="images/xmas4.jpg" class="card-image"></div>
-        <div class="card" data-card-id="5"data-img="images/xmas5.jpg">
-            <img src="images/xmas5.jpg" class="card-image"></div>
-        <div class="card" data-card-id="6"data-img="images/xmas6.jpg">
-            <img src="images/xmas6.jpg" class="card-image"></div>
-        <div class="card" data-card-id="7"data-img="images/xmas7.jpg">
-            <img src="images/xmas7.jpg" class="card-image"></div>
-        <div class="card" data-card-id="8"data-img="images/xmas8.jpg">
-            <img src="images/xmas8.jpg" class="card-image"></div>
-        <div class="card" data-card-id="9"data-img="images/xmas9.jpg">
-            <img src="images/xmas9.jpg" class="card-image"></div>
-        <div class="card" data-card-id="10"data-img="images/xmas10.jpg">
-            <img src="images/xmas10.jpg" class="card-image"></div>
-<div class="card" data-card-id="11"data-img="images/xmas11.jpg">
-            <img src="images/xmas11.jpg" class="card-image"></div>
-<div class="card" data-card-id="12"data-img="images/xmas12.jpg">
-            <img src="images/xmas12.jpg" class="card-image"></div>
-<div class="card" data-card-id="13"data-img="images/xmas13.jpg">
-            <img src="images/xmas13.jpg" class="card-image"></div>
-<div class="card" data-card-id="14"data-img="images/xmas14.jpg">
-            <img src="images/xmas14.jpg" class="card-image"></div>
-<div class="card" data-card-id="15"data-img="images/xmas15.jpg">
-            <img src="images/xmas15.jpg" class="card-image"></div>
-<div class="card" data-card-id="16"data-img="images/xmas16.jpg">
-            <img src="images/xmas16.jpg" class="card-image"></div>
-<div class="card" data-card-id="17"data-img="images/xmas17.jpg">
-            <img src="images/xmas17.jpg" class="card-image"></div>
-<div class="card" data-card-id="18"data-img="images/xmas18.jpg">
-            <img src="images/xmas18.jpg" class="card-image"></div>
-<div class="card" data-card-id="19"data-img="images/xmas19.jpg">
-            <img src="images/xmas19.jpg" class="card-image"></div>
-<div class="card" data-card-id="20"data-img="images/xmas20.jpg">
-            <img src="images/xmas20.jpg" class="card-image"></div>
-<div class="card" data-card-id="21"data-img="images/xmas21.jpg">
-            <img src="images/xmas21.jpg" class="card-image"></div>
-<div class="card" data-card-id="22"data-img="images/xmas22.jpg">
-            <img src="images/xmas22.jpg" class="card-image"></div>
-<div class="card" data-card-id="23"data-img="images/xmas23.jpg">
-            <img src="images/xmas23.jpg" class="card-image"></div>
-<div class="card" data-card-id="24"data-img="images/xmas24.jpg">
-            <img src="images/xmas24.jpg" class="card-image"></div>
-<div class="card" data-card-id="25"data-img="images/xmas25.jpg">
-            <img src="images/xmas25.jpg" class="card-image"></div>
-<div class="card" data-card-id="26"data-img="images/xmas26.jpg">
-            <img src="images/xmas26.jpg" class="card-image"></div>
-<div class="card" data-card-id="27"data-img="images/xmas27.jpg">
-            <img src="images/xmas27.jpg" class="card-image"></div>
-<div class="card" data-card-id="28"data-img="images/xmas28.jpg">
-            <img src="images/xmas28.jpg" class="card-image"></div>
-<div class="card" data-card-id="29"data-img="images/xmas29.jpg">
-            <img src="images/xmas29.jpg" class="card-image"></div>
-<div class="card" data-card-id="30"data-img="images/xmas30.jpg">
-            <img src="images/xmas30.jpg" class="card-image"></div>
+        <div class="card" data-card-id="3"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas3.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas3.jpg" class="card-image"></div>
+        <div class="card" data-card-id="4"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas4.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas4.jpg" class="card-image"></div>
+        <div class="card" data-card-id="5"data-img="https://agneslity.gi5thub.io/christmas-card-selector/images/xmas5.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas5.jpg" class="card-image"></div>
+        <div class="card" data-card-id="6"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas6.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas6.jpg" class="card-image"></div>
+        <div class="card" data-card-id="7"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas7.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas7.jpg" class="card-image"></div>
+        <div class="card" data-card-id="8"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas8.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas8.jpg" class="card-image"></div>
+        <div class="card" data-card-id="9"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas9.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas9.jpg" class="card-image"></div>
+        <div class="card" data-card-id="10"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas10.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas10.jpg" class="card-image"></div>
+<div class="card" data-card-id="11"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas11.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas11.jpg" class="card-image"></div>
+<div class="card" data-card-id="12"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas12.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas12.jpg" class="card-image"></div>
+<div class="card" data-card-id="13"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas13.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas13.jpg" class="card-image"></div>
+<div class="card" data-card-id="14"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas14.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas14.jpg" class="card-image"></div>
+<div class="card" data-card-id="15"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas15.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas15.jpg" class="card-image"></div>
+<div class="card" data-card-id="16"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas16.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas16.jpg" class="card-image"></div>
+<div class="card" data-card-id="17"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas17.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas17.jpg" class="card-image"></div>
+<div class="card" data-card-id="18"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas18.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas18.jpg" class="card-image"></div>
+<div class="card" data-card-id="19"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas19.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas19.jpg" class="card-image"></div>
+<div class="card" data-card-id="20"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas20.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas20.jpg" class="card-image"></div>
+<div class="card" data-card-id="21"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas21.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas21.jpg" class="card-image"></div>
+<div class="card" data-card-id="22"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas22.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas22.jpg" class="card-image"></div>
+<div class="card" data-card-id="23"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas23.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas23.jpg" class="card-image"></div>
+<div class="card" data-card-id="24"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas24.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas24.jpg" class="card-image"></div>
+<div class="card" data-card-id="25"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas25.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas25.jpg" class="card-image"></div>
+<div class="card" data-card-id="26"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas26.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas26.jpg" class="card-image"></div>
+<div class="card" data-card-id="27"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas27.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas27.jpg" class="card-image"></div>
+<div class="card" data-card-id="28"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas28.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas28.jpg" class="card-image"></div>
+<div class="card" data-card-id="29"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas29.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas29.jpg" class="card-image"></div>
+<div class="card" data-card-id="30"data-img="https://agneslity.github.io/christmas-card-selector/images/xmas30.jpg">
+            <img src="https://agneslity.github.io/christmas-card-selector/images/xmas30.jpg" class="card-image"></div>
 
 
 
