--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
             const cardGrid = document.getElementById('cardGrid');
             const cardFileNames = [
 "images/xmas1.jpg",
-    "images/xmas2.jpg",
+    //"images/xmas2.jpg",
     "images/xmas3.jpg",
-"images/xmas4.jpg",
-"images/xmas5.jpg",
-"images/xmas6.jpg",
+//"images/xmas4.jpg",
+//"images/xmas5.jpg",
+//"images/xmas6.jpg",
 "images/xmas7.jpg",
 "images/xmas8.jpg",
 "images/xmas9.jpg",
@@ -157,7 +157,7 @@
 "images/xmas11.jpg",
 "images/xmas12.jpg",
 "images/xmas13.jpg",
-"images/xmas14.jpg",
+//"images/xmas14.jpg",
 "images/xmas15.jpg",
 "images/xmas16.jpg",
 "images/xmas17.jpg",
