--- a/index.html
+++ b/index.html
@@ -147,34 +147,34 @@
 const cardData = [
 { fileName:"xmas1.jpg",designer:"1A Chloe Kong"},
     //"xmas2.jpg",
-    "xmas3.jpg",
+    { fileName:"xmas3.jpg",designer:"1D Shirley Wong"},
 //"xmas4.jpg",
 //"xmas5.jpg",
 //"xmas6.jpg",
-"xmas7.jpg",
-"xmas8.jpg",
-"xmas9.jpg",
-"xmas10.jpg",
-"xmas11.jpg",
-"xmas12.jpg",
-"xmas13.jpg",
+{ fileName:"xmas7.jpg",designer:"1E Prudence Fu"},
+{ fileName:"xmas8.jpg",designer:"2A Wylma Chan"},
+{ fileName:"xmas9.jpg",designer:"2A Kayla Tang"},
+{ fileName:"xmas10.jpg",designer:"2A Katy Lau"},
+{ fileName:"xmas11.jpg",designer:"2A Kayley Hui"},
+{ fileName:"xmas12.jpg",designer:"2A Florence Ho"},
+{ fileName:"xmas13.jpg",designer:"2A Valerie Wan"},
 //"xmas14.jpg",
-"xmas15.jpg",
-"xmas16.jpg",
-"xmas17.jpg",
-"xmas18.jpg",
-"xmas19.jpg",
-"xmas20.jpg",
-"xmas21.jpg",
-"xmas22.jpg",
-"xmas23.jpg",
-"xmas24.jpg",
-"xmas25.jpg",
-"xmas26.jpg",
-"xmas27.jpg",
-"xmas28.jpg",
-"xmas29.jpg",
-"xmas30.jpg",
+{ fileName:"xmas15.jpg",designer:"3A Dorothy Tam"},
+{ fileName:"xmas16.jpg",designer:"3B Crystal Chan"},
+{ fileName:"xmas17.jpg",designer:"3D Winnie Chung"},
+{ fileName:"xmas18.jpg",designer:"3E Bonnie Mok"},
+{ fileName:"xmas19.jpg",designer:"4A Fiona Tsang"},
+{ fileName:"xmas20.jpg",designer:"4A Iris Li"},
+{ fileName:"xmas21.jpg",designer:"4A Apple Lam"},
+{ fileName:"xmas22.jpg",designer:"4A Nickey Leung"},
+{ fileName:"xmas23.jpg",designer:"4A Anya Chum"},
+{ fileName:"xmas24.jpg",designer:"4C Minnie Guo"},
+{ fileName:"xmas25.jpg",designer:"4C Charlotte Ngai"},
+{ fileName:"xmas26.jpg",designer:"4E Vivian Chan"},
+{ fileName:"xmas27.jpg",designer:"4E Hailey Leung"},
+{ fileName:"xmas28.jpg",designer:"4E Esther Yeung"},
+{ fileName:"xmas29.jpg",designer:"5C Mavis Chan"},
+{ fileName:"xmas30.jpg",designer:"3E Elizabeth Choi"},
 
 ];
             
